Feature/yonatanari/wellcome page responsive without media (#737)
* no media query fix for welcome page layout

* Change flex to grid, ad min-max

* correct principles min-max

* Add and Use "grid-auto-fit" mixin for content grid.

* Add and Use "grid-auto-fit" mixin for content grid.

--- a/src/storybook/stand-alone-documentaion/welcome/abilities-description/abilities-description.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/abilities-description/abilities-description.scss
@@ -1,10 +1,10 @@
 @import "../../../../styles/global-css-settings";
 @import "../../../styles/content-spacing";
 
+$abilities-cell-min-width: 180px;
+
 .monday-storybook-abilities-description {
   margin-top: $spacing-between-section-items;
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: $spacing-large;
+
+  @include grid-auto-fit($grid-gap: $spacing-large, $grid-cell-min-width: $abilities-cell-min-width);
 }
