--- a/src/styles/global-css-settings.scss
+++ b/src/styles/global-css-settings.scss
@@ -44,3 +44,23 @@ $expand-animation-timing: cubic-bezier(0, 0, 0.35, 1);
   height: 0;
   position: absolute;
 }
+
+// Grid auto fit
+// - This mixin defines a grid with auto fit repeat cells using min-max funtion.
+// -- This allows grid to accommodate container width without media queries.
+// -- it uses a repeat grid function with auto fix and minmax.
+// -- grid adaptation is due to the min value along with auto-fit and 1fr max value.
+
+// @params:
+// - $grid-gap: null , defines grid "gap" attribute.
+// - $grid-column-gap: null,  defines grid "column-gap" attribute.
+// - $grid-row-gap: null,  defines grid "row-gap" attribute.
+// - $grid-cell-min-width: {mandatory}, defined min value in for grid-template-columns
+
+@mixin grid-auto-fit($grid-gap: null, $grid-column-gap: null, $grid-row-gap: null, $grid-cell-min-width) {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(#{$grid-cell-min-width}, 1fr));
+  gap: $grid-gap;
+  column-gap: $grid-column-gap;
+  row-gap: $grid-row-gap;
+}
