Link alignment - inline abilities

--- a/src/components/Link/Link.scss
+++ b/src/components/Link/Link.scss
@@ -16,6 +16,14 @@
       text-decoration: underline;
     }
   }
+  &.inline-text {
+    display: inline-flex;
+    align-items: unset;
+  }
+  &.inherit-font-size {
+    font-size: inherit;
+    line-height: inherit;
+  }
   &--icon-start {
     line-height: 24px;
     margin-right: $spacing-small;
