fix dialog container default text

--- a/src/components/DialogContentContainer/DialogContentContainer.scss
+++ b/src/components/DialogContentContainer/DialogContentContainer.scss
@@ -3,6 +3,7 @@
 @import "../../styles/global-css-settings";
 
 .dialog-content-container {
+  color: var(--primary-text-color);
   &:focus {
     outline: none;
   }
