--- a/src/storybook/components/related-components/related-components.scss
+++ b/src/storybook/components/related-components/related-components.scss
@@ -1,9 +1,13 @@
 @import "../../../styles/global-css-settings";
 @import "../../styles/content-spacing";
 
+$related-components-grid-gap: $spacing-large;
+$related-components-cell-min-width: $grid-auto-fit-cell-width-medium;
+$related-components-grid-cell-array-calc: calc(33.3% - #{$related-components-grid-gap});
+
 .monday-storybook-related-components {
-  display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
-  grid-gap: $spacing-large;
-  width: 100%;
+  @include grid-auto-fit(
+          $grid-gap: $related-components-grid-gap,
+          $grid-cell-min-width: $related-components-cell-min-width,
+          $grid-cell-array-calc: $related-components-grid-cell-array-calc);
 }
