--- a/src/storybook/components/component-rules/component-rules.scss
+++ b/src/storybook/components/component-rules/component-rules.scss
@@ -1,19 +1,22 @@
+@import "../../../styles/global-css-settings";
 @import "../../styles/content-spacing";
 
+$component-rules-grid-gap: $spacing-xxl;
+$component-rules-cell-min-width: $grid-auto-fit-cell-width-large;
+$component-rules-grid-cell-array-calc: calc(50% - #{$component-rules-grid-gap});
+
 .monday-storybook-component-rules {
-  display: flex;
-  flex-direction: column;
 
   &_pair {
-    display: flex;
-    margin-bottom: $spacing-between-section-items;
+    margin-bottom: 80px;
+    @include grid-auto-fit(
+            $grid-gap: $component-rules-grid-gap,
+            $grid-cell-min-width: $component-rules-cell-min-width,
+            $grid-cell-array-calc: $component-rules-grid-cell-array-calc);
+
 
     &:last-child {
       margin-bottom: 0;
     }
-  }
-
-  .monday-storybook-component-rule--recommended {
-    margin-right: 43px;
   }
 }
