--- a/src/storybook/stand-alone-documentaion/welcome/abilities-description/abilities-description.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/abilities-description/abilities-description.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/global-css-settings";
 @import "../../../styles/content-spacing";
 
-$abilities-cell-min-width: 180px;
+$abilities-cell-min-width: $grid-auto-fit-cell-width-medium;
 $abilities-grid-gap: $spacing-large;
 $abilities-grid-cell-array-calc: calc(33.3% - #{$abilities-grid-gap});
 
