--- a/src/storybook/stand-alone-documentaion/welcome/principles/principles.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/principles/principles.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/global-css-settings";
 @import "../../../styles/content-spacing";
 
-$principles-cell-min-width: 180px;
+$principles-cell-min-width: $grid-auto-fit-cell-width-medium;
 $principles-column-gap: $spacing-large;
 $principles-row-gap: $spacing-xxxl;
 $principles-grid-cell-array-calc: calc(25% - #{$principles-column-gap});
