Add Poppins font to H1 (#154)
* Add Poppins font to H1
* Add Poppins via h1 font family token
* Add h1-font-family token to core font maps
* Update h1 typography token

* Add Roboto as Poppins fallback

* Update allowed vars with "h1-font-family"

--- a/src/config/tokens/core/_core-fonts.scss
+++ b/src/config/tokens/core/_core-fonts.scss
@@ -26,6 +26,7 @@ $font-weight-bold: 500;
 
 // - Font family
 $font-family: "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
+$h1-font-family: "Poppins", "Roboto", "Rubik", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
 
 // - Font smoothing
 $font-smoothing-webkit: antialiased;
