--- a/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-component/spacing-component.scss
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-component/spacing-component.scss
@@ -40,6 +40,7 @@
   flex-direction: column;
   margin: 0 var(--spacing-medium);
   align-items: center;
+  justify-content: flex-end;
 
   &_title-container {
     display: flex;
