Feature/yonatan ari/storybook repsoinsive tweaks (#752)
* modify "grid-auto-fit" mixin to include clamp

* refactor "grid-auto-fit" includes in welcome page

* Add "grid-auto-fit" to related components.

* Add "grid-auto-fit" to shadow example and shadow levels.

* Add "grid-auto-fit" to component rules.

* Add "grid-auto-fit" to spacing.

* modify "grid-auto-fit" to use global size variables..

* adjust spacing component alignment

--- a/src/storybook/stand-alone-documentaion/welcome/contributors/contributors.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/contributors/contributors.scss
@@ -1,18 +1,19 @@
 @import "../../../../styles/global-css-settings";
 @import "../../../styles/content-spacing";
 
-$contributor-cell-min-width: 280px;
+$contributor-cell-min-width: $grid-auto-fit-cell-width-large;
+$contributor-grid-column-gap: $spacing-large;
+$contributor-grid-row-gap: 90px;
+$contributor-grid-cell-array-calc: calc(33.3% - #{$contributor-grid-column-gap});
 
 .monday-storybook-welcome-contributors {
   margin-top: 68px;
 
   @include grid-auto-fit(
-          $grid-column-gap: $spacing-large,
-          $grid-row-gap: 90px,
-          $grid-cell-min-width: $contributor-cell-min-width
-  );
-
-
+          $grid-column-gap: $contributor-grid-column-gap,
+          $grid-row-gap: $contributor-grid-row-gap,
+          $grid-cell-min-width: $contributor-cell-min-width,
+          $grid-cell-array-calc: $contributor-grid-cell-array-calc);
 
   &_contributor {
     &--bg-pattern-1 {
@@ -35,4 +36,5 @@ $contributor-cell-min-width: 280px;
       background-image: url("../assets/BackgroundPattern5.png");
     }
   }
+
 }
