--- a/src/storybook/stand-alone-documentaion/welcome/principles/principles.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/principles/principles.scss
@@ -1,15 +1,20 @@
 @import "../../../../styles/global-css-settings";
 @import "../../../styles/content-spacing";
 
-$principles-cell-min-width: 180px;
+$principles-cell-min-width: $grid-auto-fit-cell-width-medium;
+$principles-column-gap: $spacing-large;
+$principles-row-gap: $spacing-xxxl;
+$principles-grid-cell-array-calc: calc(25% - #{$principles-column-gap});
+
 
 .monday-storybook-principles {
   margin-top: $spacing-between-section-items;
 
   @include grid-auto-fit(
-    $grid-column-gap: $spacing-large,
-    $grid-row-gap: $spacing-xxxl,
-    $grid-cell-min-width: $principles-cell-min-width
+          $grid-column-gap: $principles-column-gap,
+          $grid-row-gap: $principles-row-gap,
+          $grid-cell-min-width: $principles-cell-min-width,
+          $grid-cell-array-calc: $principles-grid-cell-array-calc
   );
 
   * img {
