Fix responsive issues. * Add grid auto-fit to motion page components * Add auto-fit-cell-width xl and modify large. * Update contributors to auto-fit-cell-width xl

--- a/src/storybook/stand-alone-documentaion/motion/easing-overview/easing-overview.module.scss
+++ b/src/storybook/stand-alone-documentaion/motion/easing-overview/easing-overview.module.scss
@@ -3,11 +3,13 @@
 }
 
 .video {
-  flex-grow: 1;
-  max-width: 620px;
+  max-width: 100%;
+  flex-shrink: 1;
 }
 
 .easingInformationBox {
+  max-width: 330px;
+
   p {
     margin-top: 0;
     margin-bottom: var(--spacing-small);
