--- a/src/storybook/components/component-rule/component-rule.scss
+++ b/src/storybook/components/component-rule/component-rule.scss
@@ -14,6 +14,13 @@
     & > * {
       margin-right: $spacing-small;
     }
+
+    & > video{
+      object-fit: contain;
+      object-position: center;
+      width: calc(100% - 10px);
+      height: calc(100% - 10px);
+    }
   }
 
   &_title {
