--- a/src/storybook/stand-alone-documentaion/motion/animation-overviews/animation-overviews.module.scss
+++ b/src/storybook/stand-alone-documentaion/motion/animation-overviews/animation-overviews.module.scss
@@ -1,5 +1,12 @@
+@import "../../../../styles/global-css-settings";
+
+$animation-overview-grid-gap: 64px;
+$animation-overview-cell-min-width: $grid-auto-fit-cell-width-large;
+$animation-overview-grid-cell-array-calc: calc(50% - #{$animation-overview-grid-gap});
+
 .animationOverviewGrid{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 64px;
+  @include grid-auto-fit(
+          $grid-gap: $animation-overview-grid-gap,
+          $grid-cell-min-width: $animation-overview-cell-min-width,
+          $grid-cell-array-calc: $animation-overview-grid-cell-array-calc);
 }
