--- a/src/storybook/stand-alone-documentaion/motion/duration-expressive-tokens/duaration-expressive-tokens.module.scss
+++ b/src/storybook/stand-alone-documentaion/motion/duration-expressive-tokens/duaration-expressive-tokens.module.scss
@@ -1,11 +1,19 @@
-.durationTokensGrid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: var(--spacing-large);
-  row-gap: var(--spacing-xxl);
-  margin-bottom:var(--spacing-xxxl); 
+@import "../../../../styles/global-css-settings";
 
-  * img {
+$duration-grid-column-gap:  var(--spacing-large);
+$duration-cell-min-width: $grid-auto-fit-cell-width-medium;
+$duration-grid-cell-array-calc: calc(33.3% - #{$duration-grid-column-gap});
+$duration-grid-row-gap: var(--spacing-xxl);
+
+.durationTokensGrid {
+  @include grid-auto-fit(
+          $grid-column-gap: $duration-grid-column-gap,
+          $grid-row-gap: $duration-grid-row-gap,
+          $grid-cell-min-width: $duration-cell-min-width,
+          $grid-cell-array-calc: $duration-grid-cell-array-calc);
+  margin-bottom:var(--spacing-xxxl);
+
+  * video {
     height: 100%;
     width: 100%;
     object-fit: cover;
