--- a/src/config/maps/core/_core-motion-map.scss
+++ b/src/config/maps/core/_core-motion-map.scss
@@ -4,15 +4,14 @@
 // - Map is collected into the $core-settings-map and is interpolated into custom properties.
 
 $core-motion-map: (
-        animation-productive-short: $animation-productive-short,
-        animation-productive-medium: $animation-productive-medium,
-        animation-productive-long: $animation-productive-long,
-        animation-expressive-short: $animation-expressive-short,
-        animation-expressive-medium: $animation-expressive-medium,
-        animation-expressive-long: $animation-expressive-long,
-        animation-timing-enter: $animation-easing-in,
-        animation-timing-exit: $animation-timing-exit,
-        animation-timing-transition: $animation-timing-transition,
-        animation-timing-emphasize: $animation-timing-emphasize,
+        motion-productive-short: $motion-productive-short,
+        motion-productive-medium: $motion-productive-medium,
+        motion-productive-long: $motion-productive-long,
+        motion-expressive-short: $motion-expressive-short,
+        motion-expressive-long: $motion-expressive-long,
+        motion-timing-enter: $motion-timing-enter,
+        motion-timing-exit: $motion-timing-exit,
+        motion-timing-transition: $motion-timing-transition,
+        motion-timing-emphasize: $motion-timing-emphasize,
         expand-animation-timing: $expand-animation-timing,
 );
