Add Poppins font-family to h1 heading (#758)
* Add Poppins font-family to h1 heading

* Fix h1 letter spacing and sizes for new font-family.

* h1 corrections
* Adjust h1 small and medium to new settings , font-size 22px line-height 32px
* Revert letter-spacing

* Merge master fix conflicts

* Add poppins font within a boolean prop.
* Add class name for boolean prop.
* Update Story

* Remove console.log
Prettify

* Prettify

* Remove console.log

* Fix font-size wrong value in small,medium size, Use correct token.

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,7 @@
 @import "./theme-mixin";
-
+$h1-legacy-font-size: 32px;
+$h1-legacy-line-height: 52px;
+$h1-medium-font-size: 22px;
 $h1-empty-state-height: 32px;
 $h2-empty-state-height: 24px;
 $h3-empty-state-height: 24px;
@@ -96,10 +98,26 @@ $small-empty-state-height: 12px;
 
 // Override tags styles
 .element-type-h1 {
-  @include font-main();
+  font-size: $h1-legacy-font-size;
+  line-height: $h1-legacy-line-height;
+  font-weight: var(--font-weight-bold);
+  font-family: var(--font-family);
+  letter-spacing: -1px;
+  -webkit-font-smoothing: var(--font-smoothing-webkit);
+  -moz-osx-font-smoothing: var(--font-smoothing-moz);
+
+  &.brand-font {
+    font: var(--font-h1)
+  }
+
   &.size-small,
   &.size-medium {
-    @include font-title();
+    font-size: var(--font-size-h2);
+    line-height: var(--font-line-height-h2);
+
+    &.brand-font {
+      font-size: $h1-medium-font-size;
+    }
   }
 }
 
