change package.json to provide esm build + remove all alias imports + fix some css imports

--- a/src/components/AvatarGroup/AvatarGroupCounter.module.scss
+++ b/src/components/AvatarGroup/AvatarGroupCounter.module.scss
@@ -1,4 +1,4 @@
-@import "src/components/Avatar/Avatar";
+@import "../../components/Avatar/Avatar";
 
 .counterContainer {
   background: var(--primary-background-hover-color);
