--- a/src/config/tokens/core/_core-opacity.scss
+++ b/src/config/tokens/core/_core-opacity.scss
@@ -7,6 +7,7 @@ $opacity-0: 0;
 $opacity-10: 0.1;
 $opacity-20: 0.2;
 $opacity-30: 0.3;
+$opacity-38: 0.38;
 $opacity-40: 0.4;
 $opacity-50: 0.5;
 $opacity-60: 0.6;
