fix attention box specificity

--- a/src/components/AttentionBox/AttentionBox.scss
+++ b/src/components/AttentionBox/AttentionBox.scss
@@ -80,7 +80,7 @@
     }
   }
 
-  &__close-icon {
+  & &__close-icon {
     position: absolute;
     top: $spacing-small-medium;
     right: $spacing-small-medium;
