Correct chip story, use secondary text instead of disabled.

--- a/src/components/Chips/__stories__/chips.stories.scss
+++ b/src/components/Chips/__stories__/chips.stories.scss
@@ -42,7 +42,7 @@
     font-size: 14px;
 
     span {
-      @include theme-prop(color, disabled-text-color);
+      @include theme-prop(color, secondary-text-color);
     }
   }
 }
