--- a/src/components/Dropdown/components/menu/menu.scss
+++ b/src/components/Dropdown/components/menu/menu.scss
@@ -2,7 +2,7 @@
 @import "../../../../styles/global-css-settings";
 
 .dropdown-menu-wrapper {
-  animation: fadeIn 0.1s $expand-animation-timing;
+  animation: fadeIn var(--motion-productive-medium) var(--expand-animation-timing);
 }
 
 @keyframes fadeIn {
