Use motion tokens on Label.scss

--- a/src/components/Label/Label.scss
+++ b/src/components/Label/Label.scss
@@ -25,9 +25,8 @@
   }
 
   &--with-animation {
-    animation: label-pop 200ms;
+    animation: label-pop var(--motion-productive-long) var(--motion-timing-enter);
     transform-origin: bottom left;
-    animation-timing-function: cubic-bezier(0, 0, 0.35, 1);
   }
 
   &--kind {
