--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -11,7 +11,7 @@
   align-items: center;
   margin: 0 var(--spacing-xs);
   user-select: none;
-  animation: chipsEnter var(--motion-productive-medium) var(--motion-timing-enter);
+  animation: chipsEnter var(--motion-productive-medium) var(--motion-timing-emphasize);
 
   &.withUserSelect {
     user-select: text;
