Fix styleint errors

--- a/src/components/Tipseen/TipseenImage.module.scss
+++ b/src/components/Tipseen/TipseenImage.module.scss
@@ -1,13 +1,11 @@
 @import "../../styles/themes";
-@import "../../styles/typography";
-@import "../../styles/global-css-settings";
 
 .tipseenImage {
   object-fit: cover;
   border: solid 2px;
   @include theme-prop(border-color, primary-color);
   width: 100%;
-  border-radius: $border-radius-medium;
+  border-radius: var(--border-radius-medium);
   position: relative;
   z-index: 1;
 }
