--- a/src/components/Tipseen/TipseenContent.module.scss
+++ b/src/components/Tipseen/TipseenContent.module.scss
@@ -1,15 +1,10 @@
-@import "../../styles/themes";
-@import "../../styles/typography";
-@import "../../styles/global-css-settings";
-@import "./Tipseen.module";
-
 .tipseenContent {
   &Buttons {
-    margin-top: $spacing-medium;
+    margin-top: var(--spacing-medium);
     display: flex;
     justify-content: flex-end;
     &Dismiss {
-      margin-right: $spacing-small;
+      margin-right: var(--spacing-small)
     }
   }
 }
