Fix typo in token name

--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
@@ -80,7 +80,7 @@
     &-enter-active {
       position: relative;
       opacity: 1;
-      transition: transform var(-motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
+      transition: transform var(--motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
       transform: translateY(0);
     }
 
@@ -95,7 +95,7 @@
       position: relative;
       opacity: 0;
       transform: translateY(-15px);
-      transition: transform var(-motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
+      transition: transform var(--motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
     }
   }
 
