--- a/src/components/Toggle/Toggle.scss
+++ b/src/components/Toggle/Toggle.scss
@@ -18,7 +18,7 @@
 
   &_toggle {
     @include reset-button();
-    transition: background-color 100ms $expand-animation-timing;
+    transition: background-color var(--motion-productive-medium) var(--expand-animation-timing);
     margin: 0 $spacing-small;
     position: relative;
     height: 24px;
@@ -34,7 +34,7 @@
       height: 18px;
       border-radius: 50%;
       top: calc(50% - 18px / 2);
-      transition: left 100ms $expand-animation-timing;
+      transition: left var(--motion-productive-medium) var(--expand-animation-timing);
     }
 
     &--selected {
