--- a/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
+++ b/src/components/MultiStepIndicator/components/StepIndicator/StepIndicator.scss
@@ -67,7 +67,7 @@
   }
 
   &--with-animation {
-    animation: circle-pop 250ms;
+    animation: circle-pop var(--motion-expressive-short);
   }
 
   &--swap {
@@ -80,7 +80,7 @@
     &-enter-active {
       position: relative;
       opacity: 1;
-      transition: transform 150ms cubic-bezier(0, 0, 0.35, 1), opacity 70ms;
+      transition: transform var(--motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
       transform: translateY(0);
     }
 
@@ -95,7 +95,7 @@
       position: relative;
       opacity: 0;
       transform: translateY(-15px);
-      transition: transform 150ms cubic-bezier(0, 0, 0.35, 1), opacity 70ms;
+      transition: transform var(--motion-productive-long) var(--motion-timing-enter), opacity var(--motion-productive-short);
     }
   }
 
