Use motion tokens on Chips.module.scss (#782)
* Use motion tokens on Chips.module.scss

* Change timing to emphasize

--- a/src/components/Chips/Chips.module.scss
+++ b/src/components/Chips/Chips.module.scss
@@ -11,8 +11,7 @@
   align-items: center;
   margin: 0 var(--spacing-xs);
   user-select: none;
-  animation: chipsEnter 100ms;
-  animation-timing-function: cubic-bezier(0, 0, 0.35, 1);
+  animation: chipsEnter var(--motion-productive-medium) var(--motion-timing-emphasize);
 
   &.withUserSelect {
     user-select: text;
